# A-algorithm-demonstration

./: .gitignore  README.md  pyproject.toml
backend/: app.py  models.py
backend/algorithms/: .env  .env.example  astar.py  base.py  dijkstra.py  greedy.py  grid.py  llm_astar.py
frontend/: app.js  index.html  styles.css
tests/: test_astar.py  test_llm_astar.py
